# smart-file2md

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
release_notes/: v1.0.0.md  v1.1.0.md
src/markdown_convert/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/markdown_convert/converters/: __init__.py  base.py  docx_converter.py  factory.py  ocr_converter.py  pdf_converter.py
src/markdown_convert/utils/: __init__.py  file_utils.py
tests/: __init__.py  test_cli.py  test_converters.py  test_docx_converter.py
